# Orexeva

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml  tree.py  what is this.md
src/orexeva/: __main__.py  cli.py  cli_registry.py  constants.py  registry.py
src/orexeva/commands/: __init__.py  clean.py  doctor.py  models.py  recommend.py  repair.py  setup.py  update.py  version.py  workspace.py
src/orexeva/config/: __init__.py  defaults.py  manager.py  paths.py  storage.py
src/orexeva/core/: __init__.py  context.py  engine.py  exceptions.py  result.py
src/orexeva/core/services/: __init__.py  clean_service.py  doctor_service.py  models_service.py  recommend_service.py  repair_service.py  setup_service.py  update_service.py  version_service.py  workspace_service.py
src/orexeva/intelligence/: __init__.py  advise.py  analyze.py  decide.py  engine.py  evaluate.py  exceptions.py  summarize.py  types.py
src/orexeva/platform/: __init__.py  detector.py  linux.py  macos.py  windows.py
src/orexeva/providers/: __init__.py  base.py  catalog.py  exceptions.py  manager.py
src/orexeva/providers/runtimes/: __init__.py  jan.py  koboldcpp.py  llamacpp.py  lmstudio.py  mistralrs.py  ollama.py  text_generation_webui.py  vllm.py
src/orexeva/registry/: __init__.py  loader.py  manager.py  schema.py  storage.py
tests/: test_config.py  test_detection.py  test_registry.py
