[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "orexeva"
version = "0.1.0-alpha.1"
description = "Developer Infrastructure Platform for Local AI Development"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Aarya Patel" },
    { name = "Ruchi Tanwar" }
]
dependencies = [
    "typer>=0.16.0",
    "rich>=14.0.0"
]

[project.scripts]
orexeva = "orexeva.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/orexeva"]